updates - notations for words embeddings

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,9 @@
 \begin{abstract}
 
-This paper aims at explaining how we tackled data-quality challenges at Alkemics, with the use of some machine learning algorithms.
-But rather than solely describing models and algorithms, a strong focus is put on implementation and business added value. 
-
-
 Confronted with challenges concerning product data quality, Alkemics decided to explore new ways to provide value proposition to its clients.
+
+This paper aims at explaining how we tackled data-quality challenges at Alkemics, with the use of some machine learning algorithms.
+But rather than solely describing models and algorithms, a focus is put on implementation and business added value. 
 
 
 \end{abstract}
