--- a/biblio.bib
+++ b/biblio.bib
@@ -42,6 +42,12 @@
     pages = {625 - 632}
 }
 
+@article{NLTK,
+    author = {Bird, Steven, Edward Loper and Ewan Klein.},
+    title = {Natural Language Processing with Python},
+    journal = {O'Reilly Media Inc},
+    year = {2009}
+}
 
 % Optional fields: volume/number, series, address, edition, month, note
 @book{HTF09,
@@ -53,7 +59,7 @@
 
 % Optional fields: author, title, howpublished, month, year, note
 
-@misc{RulesMLGoogle,
+@article{RulesMLGoogle,
     author = {M. Zinkevich.},
     title = {Rules of Machine Learning: Best Practices for ML Engineering},
     year = {2016},
