--- a/concl.tex
+++ b/concl.tex
@@ -3,19 +3,24 @@
 \label{cha:conclusion}
 
 
-During this project, we transformed a workflow dedicated to one multiclass field, to a much flexible and adaptable workflow.
+During this project, we tackled a business issue concerning data-quality that strongly impact our clients, and especially retailers.
 
+Our solution to this challenge has been to build a dedicated workflow where we would detect data-inconsistencies through: attribute classification with machine learning techniques, product-data scrapping on the web, manual rules.
 
-Machine learning hype drives attention mostly to models and algorithms. 
-Yet, this project convinced me that 90\% of a project success depends on pragmatism and implementation.
+A majority of our suggestion stem from machine learning, to achieve this result we've had to overcome some specific challenges relative to natural language processing, and multilabel classification. To release and provide 99\% accurate suggestions to our users, we decided for now to validate manually all suggestions that did not stem from at least two different sources.
 
-Fields to explore ....
+Machine learning hype drives attention mostly to models and algorithms.  Yet, this project convinced me that 80\% of a project success depends on pragmatism and implementation. The algorithms were a part of the equation, feasibility, implementation and business value were the others.
 
-Lot more to say when paper will be finished.
+In our case, the added value brought by this project can make a impactful differentiation between our solution and one of a potential competitor, since it brings new tools to address one of the major problems our clients face.
+
+I am very pleased I had the opportunity to work on this project, and am looking forward to continuing it by joining Alkemics teams.
 
 \chapter*{Acknowledgment}
 
-Big up to @caillou for ML, and Alkemics as a whole for engineering skills.
-Big up to MS BGD @Telecom for accepting me in 2017 promo
+I would like to thank Telecom ParisTech Master's degree team for accepting me in 2017 promotion and trust in my ability to attend your courses. The great quality of your courses allowed me to gain sufficient knowledge to successfully switch from a business to a more technical career. Among Telecom's team I thank Slim Essid for accepting to be my academic supervisor.
+
+My sincere thanks also goes to my Alkemics colleagues who helped me raise my developer skills, and especially Pierre Arbelet who challenged me and introduced me to lots of machine learning fields that were new to me.
+
+Finally, I would like to thank my familly who helped me believe in the ability to take a year off to switch carreer, and especially my wife.
 
 \addcontentsline{toc}{chapter}{Acknowledgment}
