--- a/p_intro.tex
+++ b/p_intro.tex
@@ -1,47 +1,51 @@
 \chapter{Introduction}
 
-Alkemics is a start-up that was founded in 2011. Back then, they created e-merchandising tools to improve user experience on e-commerce websites. It then evolved to become a platform that enables the FMCG (Fast-Moving Consumer Goods) ecosystem to share all their data, from product to transactional information, in order to improve pricing, supply, marketing.
+After the Master's Degree at Telecom, I joined Alkemics team to tackle data-quality challenges involving predicting methods. 
 
-Alkemics develops products that enable collaboration between Brands and Retailers, and tackle the challenges of omni-channel commerce and smart customer interaction.
+Before diving in the machine-learning related challenges, this chapter will present Alkemics, its proposition value, and its technological stack.
 
 \section{Alkemics}
 
-\begin{figure}[H]
-\centering
-\includegraphics[scale=0.30]{./images/alkemics_website_global.png}
-\caption{Alkemics}
-\end{figure}
 
-\subsection{Product Data Empowerment}
+Alkemics connects brands and retailers to help them market \& sell their products everywhere, driving business growth, by allowing them to collect, enrich, and share product data across the retail ecosystem.
 
-Because of increasing regulations, new customer demands, omni-channel communications, there is a growing need for richer and more exhaustive product information as well as an exponentially growing number of products. Some products change more than 10 times per year (promotion, seasonality, new recipes, new packagings...), and overall, 40\% of products are renewed every year.
+Our mission is to connect every brand with every retailer in the world. The platform streamlines the management of digital product content (i.e., packaging, ingredients, visuals, promotions, rich media), extracts structured metadata for optimal quality and usability, and automates delivery to retail partners and third party service providers.
 
-This cascades in a series of problems that handicap manufacturers, retailers and consumers: logistics struggle to maintain stock, accounting systems fail to track how different products are actually the same consumption unit, pricing teams struggle to maintain price coherency in this dynamic environment, marketing teams are inefficient to share richer and richer content about the product, BI teams feel that the consumption of the consumer are changing while they actually don't.
-
-This problem is called product chaining. It describes the ability to connect products that share a given set of attributes in order to understand how they relate.
-
-To overcome these problems, Alkemics built a product taxonomy reinforced by an ontology. PDE \footnote{Product Data Empowerment} team is fully dedicated to enhance the classification task to automatically classify the category of products, as well as the brand and other attributes such as the packaging or the price range. The classification task mainly uses Natural Language Processing techniques and distances in semantic spaces. PDE is also in charge of the management of the product data model.
+Founded in 2011, and backed by world renowned investors (Index Ventures, Serena Capital, Cathay Innovation, Partech Ventures, among others), Alkemics consists of more than 70 employees.
 
 
-\subsection{Product Stream}
+\subsection{Alkemics Plateform}
 
-Product Stream is a web application that enables:
+Because of increasing regulations, new customer demands, omni-channel communications, there is a growing need for richer and more exhaustive product information. 
+
+Yet the difficulties to gather this data keep growing: the number of products is growing exponentially, some products identification numbers change more than 10 times per year (promotion, seasonality, new recipes, new packagings...), and overall, 40\% of products identification numbers are renewed every year.
+
+This cascades in a series of problems that handicap manufacturers, retailers and consumers: logistics struggle to maintain stock, accounting systems fail to track how different products are actually the same consumption unit, pricing teams struggle to maintain price coherency in this dynamic environment, marketing teams are inefficient to share richer and richer content about the product, BI teams feel that the consumption of the consumer are changing while they actually don't. 
+
+Alkemics solution to these challenges is a plateform that enables:
 \\
 
 \textbf{Makers} to:
     \begin{itemize}
     \item Collect product information from all the stakeholders of the organization: the \textit{supply team} who knows the size and weight of the product, the \textit{marketing team} who owns the pictures, videos as well as the brand content, the \textit{quality team} who masters the composition, nutritional values, etc.
-    \item Store product information in a centralized way, so everyone in the organization can have access to it (DAM \footnote{Digital Asset Management}).
-    \item Distribute product information so every partner has the same up-to-date information. This includes retailers, but also marketing agencies, trade marketing agencies, ... (EDI \footnote{Electronic Data Interchange} / PIM \footnote{Product information management})
+    \item Store product information in a centralized way, so everyone in the organization can have access to it.
+    \item Distribute product information so every partner has the same up-to-date information. This includes retailers, but also marketing agencies, trade marketing agencies, ...
     \item Collaborate with 3rd parties to collect user reviews,  receive data quality reports,  print coupons, use buy-it-now solutions.
     \end{itemize}
 
 \textbf{Retailers} to:
     \begin{itemize}
-    \item Have access to best-in-class product information to power their tools and feed their digital supports (EDI)
+    \item Have access to best-in-class product information to power their tools and feed their digital supports 
     \item Collaborate with manufacturers to reference new products \& innovations, run call-for-proposals for promotional formats, etc…
-    \item Connect products that share a given set of attributes in order to understand how they relate (Product Chaining).
+    \item Connect products that share a given set of attributes in order to understand how they relate
     \end{itemize}
+
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.35]{./images/alkemics_website_global.png}
+\caption{Alkemics plateform}
+\end{figure}
+
 
 \subsection{The technological stack}
 
