--- a/p_logistic_regression_multiclass_multilabel.tex
+++ b/p_logistic_regression_multiclass_multilabel.tex
@@ -1,6 +1,4 @@
-\chapter{Logistic Regression: from binary, to multiclass, to multilabel} % (fold)
-\label{cha:multilabel_classification}
-
+\chapter{Logistic Regression: from binary, to multiclass, to multilabel} 
 
 This appendix details how binary logistic regression can be extended to multiclass classification, and then multilabel classification.
 
